--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,14 +9,6 @@ services:
       - '3000:3000'
     volumes:
       - .:/usr/src/app
-    environment:
-      - NODE_ENV=development
+      - /usr/src/app/node_modules
   mongo:
     image: mongo
-    ports:
-      - '27017:27017'
-    volumes:
-      - mongo_data:/data/db
-
-volumes:
-  mongo_data:
