--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - '3000:3000'
     volumes:
       - .:/usr/src/app
+    mem_limit: 2g
   auth:
     build:
       context: .
@@ -23,5 +24,18 @@ services:
       - '3001:3001'
     volumes:
       - .:/usr/src/app
+  payments:
+    build:
+      context: .
+      dockerfile: ./apps/payments/Dockerfile
+      target: development
+    command: pnpm run start:dev payments
+    env_file:
+      - ./apps/payments/.env
+    ports:
+      - '3003:3003'
+    volumes:
+      - .:/usr/src/app
+    mem_limit: 2g
   mongo:
     image: mongo
