--- a/apps/auth/Dockerfile
+++ b/apps/auth/Dockerfile
@@ -5,17 +5,19 @@ WORKDIR /usr/src/app
 COPY package.json ./
 COPY pnpm-lock.yaml ./
 COPY tsconfig.json tsconfig.json
+COPY nest-cli.json nest-cli.json
 
 RUN npm install -g pnpm
-
-RUN pnpm install
 
 COPY apps/auth apps/auth
 COPY libs libs
 
+ENV CI=true
+RUN pnpm install -r
+
 RUN cd apps/auth && pnpm install
 
-RUN pnpm run build
+RUN pnpm run build auth
 
 FROM node:alpine as production
 
